[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cat-loss-war-room"
version = "0.1.0"
description = "CAT-Loss War Room demo package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv==1.0.1",
    "nbformat==5.10.4",
    "exa-py==2.0.2",
    "pytest==8.3.4",
    "pydantic==2.11.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
